--- a/src/main/resources/templates/admin/admin-navbar.html
+++ b/src/main/resources/templates/admin/admin-navbar.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
-<!--<nav th:fragment="admin-nav" class="admin-sidebar">-->
-<!--    <div class="sidebar-header">-->
-<!--        <h2>Admin Panel</h2>-->
-<!--    </div>-->
-<!--    <ul class="sidebar-menu">-->
-<!--        <li><a href="/admin/dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>-->
-<!--        <li><a href="/admin/institutions"><i class="fas fa-building"></i> Fundacje</a></li>-->
-<!--        <li><a href="/admin/admins"><i class="fas fa-user-shield"></i> Administratorzy</a></li>-->
-<!--        <li><a href="/admin/users"><i class="fas fa-users"></i> Użytkownicy</a></li>-->
-<!--    </ul>-->
-<!--</nav>-->
+<html lang="pl" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-<nav class="admin-navbar" th:fragment="admin-nav">
-    <div class="navbar-brand">Admin Panel</div>
-    <ul class="navbar-menu">
-        <li><a href="/admin/donations"><i class="fas fa-tachometer-alt"></i> Podarunki</a></li>
-        <li><a href="/admin/institutions"><i class="fas fa-building"></i> Fundacje</a></li>
-        <li><a href="/admin/admins"><i class="fas fa-user-shield"></i> Administratorzy</a></li>
-        <li><a href="/admin/users"><i class="fas fa-users"></i> Użytkownicy</a></li>
-    </ul>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="admin-nav">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Admin Panel</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}"><i class="fas fa-home"></i> Strona główna</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/donations}"><i class="fas fa-gift"></i> Podarunki</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/admins}"><i class="fas fa-users"></i> Administratorzy</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/users}"><i class="fas fa-users"></i> Użytkownicy</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <span class="nav-link">
+                        Witaj, <span sec:authentication="name"></span>!
+                    </span>
+                </li>
+                <li class="nav-item">
+                    <form th:action="@{/logout}" method="post" class="d-flex">
+                        <button class="btn btn-outline-light" type="submit">
+                            <i class="fas fa-sign-out-alt"></i> Wyloguj
+                        </button>
+                    </form>
+                </li>
+            </ul>
+        </div>
+    </div>
 </nav>
 </html>
