--- a/src/main/resources/templates/user/user-account.html
+++ b/src/main/resources/templates/user/user-account.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>User Account Details</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
+<div th:replace="~{/user/user-header :: user-head (pageTitle='Konto użytkownika')}"></div>
 <body>
+<div th:replace="~{/user/user-navbar :: user-nav}"></div>
 <div class="container mt-5">
     <h1 class="mb-4">User Account Details</h1>
     <div class="card">
@@ -19,7 +16,8 @@
             </p>
         </div>
     </div>
-    <a href="/" class="btn btn-primary mt-3">Back to Home</a>
+    <a th:href="@{/}" class="btn btn-primary mt-3">Back to home</a>
+    <a th:href="@{/user/edit}" class="btn btn-secondary mt-3">Edit</a>
 </div>
 </body>
 </html>
